# vits.cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
scripts/: bench.py  debug_attention.py  export_vits.py  requirements.txt  test_depthwise.py  test_remove_weight_norm.py  test_tokenizer.py  test_transpose.py  test_vits.py  verify_layers.py  verify_ops.py  visualize_hifigan.py  vits-english.ggml  vits-spanish.ggml
src/: .gitignore  debug.cpp  debug.h  ggml-util.h  vits.cpp  vits_model_data.cpp  vits_tokenizer.cpp
src/include/: common.h  custom-ops.h  debug.h  ggml-util.h  vits.h  vits_model_data.h  vits_tokenizer.h
test/: bench.cpp  bench_conv1d.cpp  bench_e2e.cpp  bench_simd.cpp  main.cpp  test_ggml_utils.cpp
